# questions_answers_api_python

./: .env.example  .pre-commit-config.yaml  Makefile  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  ruff.toml
backend/: Dockerfile  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 87f721a7ab61_create_questions_and_answers_tables.py  a6f1a70819d1_seed_questions_and_answers.py
backend/app/: app_factory.py  dependencies.py  main.py
backend/app/api/routes/: questions.py
backend/app/application/: exceptions.py
backend/app/application/dtos/: answer.py  question.py
backend/app/application/interfaces/: db_mapper.py  mappers.py  uow.py
backend/app/application/use_cases/: create_answer.py  create_question.py  delete_answer.py  delete_question_with_answers.py  get_answer.py  get_question_with_answers.py  get_questions.py
backend/app/config/: logging.py
backend/app/config/ioc/: main.py
backend/app/domain/: excaptions.py
backend/app/domain/entities/: answer.py  question.py
backend/app/infrastructure/db/: exceptions.py  session.py  uow.py
backend/app/infrastructure/mappers/: question_mapper.py
backend/app/representation/api/: main.py
backend/app/routers/: answers.py  users.py
backend/scripts/: entrypoint.sh  run_migrations.py
backend/tests/: conftest.py
backend/tests/fakes/: fake_uow.py
backend/tests/test_domain/test_entities/: test_answer.py  (+1 more)
backend/tests/test_e2e/: test_get_questions.py  test_questions_routs.py
backend/tests/test_integration/: test_create_question.py  test_get_questions.py
(+33 files in other folders)
