[project]
name = "app"
version = "0.1.0"
description = "API-сервис для вопросов и ответов. Python"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "dishka>=1.7.2",
    "fastapi[standard]>=0.121.2",
    "psycopg[binary,pool]>=3.2.12",
    "sqlalchemy>=2.0.44",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = ["mypy>=1.18.2", "pytest>=9.0.0", "pytest-asyncio>=1.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ty.src]
include = ["app", "tests"]

[tool.mypy]
exclude = ["alembic"]
